dataset1235/2025-2/805158916/users/1354266131/executions/2118643220_2332513434.log
== RUN (2025-09-01 14:05:03)
-- CODE: 
real = float(input())
coroas = real * 0.70
print(coroas)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:04:43)
-- CODE: 
real = float(input())
coroas = real * 0.70
print(coroas)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:06:10)
-- CODE: 
real = float(input())
coroas = real * 0.70
print(round(coroas,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 3
    print(round(coroas,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
-- ERROR:
File "XXXX", line 3
    print(round(coroas,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
-- ERROR:
File "XXXX", line 3
    print(round(coroas,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
-- ERROR:
File "XXXX", line 3
    print(round(coroas,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
-- ERROR:
File "XXXX", line 3
    print(round(coroas,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
-- ERROR:
File "XXXX", line 3
    print(round(coroas,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
-- ERROR:
File "XXXX", line 3
    print(round(coroas,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:07:21)
-- CODE: 
real = float(input())
coroas = real * 0.70
print(round(coroas,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:05:09)
-- CODE: 
real = float(input())
coroas = real * 0.70
print(coroas)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.199999999999999
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:07:16)
-- CODE: 
real = float(input())
coroas = real * 0.70
print(round(coroas,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:07:13)
-- CODE: 
real = float(input())
coroas = real * 0.70
print(round(coroas,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 2:
---- input:
4
---- correct output:
2.8
---- user output:
2.8
-- TEST CASE 3:
---- input:
8
---- correct output:
5.6
---- user output:
5.6
-- TEST CASE 4:
---- input:
15
---- correct output:
10.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
13
---- correct output:
9.1
---- user output:
9.1
-- TEST CASE 6:
---- input:
6
---- correct output:
4.2
---- user output:
4.2
-- TEST CASE 7:
---- input:
9
---- correct output:
6.3
---- user output:
6.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
